tests/snapshots/cli_matrix__row_000_code_emphasis_nowrap_stdout.snap
---
source: tests/cli_matrix.rs
expression: stdout_result.envelope(&stdout_case)
---
case: row_000_code_emphasis_nowrap
mode: stdout
args: --code-emphasis
status: code: 0

[stdout]
| Name  | Notes                              |
| ----- | ---------------------------------- |
| alpha | Use `cargo test` before merging... |

1. first item
3. second item with enough text to wrap around the configured column width when wrapping is enabled for the matrix harness.

Title
=====

[stderr]

[file]
<not applicable>
