tests/snapshots/cli_matrix__row_000_nowrap_check.snap
---
source: tests/cli_matrix.rs
expression: result.envelope(&case)
---
case: row_000_nowrap
mode: check
args: --check
status: code: 1

[stdout]
input.dat +3 -1

[stderr]
1 file would be reformatted.

[file]
<not applicable>
