tests/snapshots/cli_matrix__row_000_wrap_check.snap
---
source: tests/cli_matrix.rs
expression: result.envelope(&case)
---
case: row_000_wrap
mode: check
args: --wrap --check
status: code: 1

[stdout]
input.dat +5 -2

[stderr]
1 file would be reformatted.

[file]
<not applicable>
