tests/snapshots/cli_matrix__row_000_wrap_diff.snap
---
source: tests/cli_matrix.rs
expression: result.envelope(&case)
---
case: row_000_wrap
mode: diff
args: --wrap --diff
status: code: 1

[stdout]
--- input.dat
+++ input.dat
@@ -1,7 +1,10 @@
-| Name | Notes | |---|---| | alpha | Use *`cargo test`* before merging... |
+| Name  | Notes                                |
+| ----- | ------------------------------------ |
+| alpha | Use *`cargo test`* before merging... |
 
 1. first item
-3. second item with enough text to wrap around the configured column width when wrapping is enabled for the matrix harness.
+3. second item with enough text to wrap around the configured column width when
+   wrapping is enabled for the matrix harness.
 
 Title
 =====

[stderr]
1 file would be reformatted.

[file]
<not applicable>
